win32ss/dwm/milcore/include/Generated/wgx_commands.h

typedef struct
{
    MILCMD Type;
    BOOL Enable;
} MILCMD_PARTITION_REGISTERFORNOTIFICATIONS;
typedef struct
{
    MILCMD Type;
    BOOL ReturnCommonMinimum;
} MILCMD_CHANNEL_REQUESTTIER;
typedef struct
{
    MILCMD Type;
    BOOL Enable;
} MILCMD_PARTITION_SETVBLANKSYNCMODE;
typedef struct
{
    MILCMD Type;
    UINT64 FrameTime;
} MILCMD_PARTITION_NOTIFYPRESENT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 pInteropDeviceBitmap;
    UINT64 pSoftwareBitmap;
} MILCMD_D3DIMAGE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 hEvent;
} MILCMD_D3DIMAGE_PRESENT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    BOOL UseDirtyRect;
    RECT DirtyRect;
} MILCMD_BITMAP_INVALIDATE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE Value;
} MILCMD_DOUBLERESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF Value;
} MILCMD_COLORRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPoint2D Value;
} MILCMD_POINTRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPointAndSizeD Value;
} MILCMD_RECTRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilSizeD Value;
} MILCMD_SIZERESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilMatrix3x2D Value;
} MILCMD_MATRIXRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPoint3F Value;
} MILCMD_POINT3DRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPoint3F Value;
} MILCMD_VECTOR3DRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilQuaternionF Value;
} MILCMD_QUATERNIONRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT cbData;
} MILCMD_RENDERDATA;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT id;
} MILCMD_ETWEVENTRESOURCE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE offsetX;
    DOUBLE offsetY;
} MILCMD_VISUAL_SETOFFSET;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hTransform;
} MILCMD_VISUAL_SETTRANSFORM;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hEffect;
} MILCMD_VISUAL_SETEFFECT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hCacheMode;
} MILCMD_VISUAL_SETCACHEMODE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hClip;
} MILCMD_VISUAL_SETCLIP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE alpha;
} MILCMD_VISUAL_SETALPHA;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilRenderOptions renderOptions;
} MILCMD_VISUAL_SETRENDEROPTIONS;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hContent;
} MILCMD_VISUAL_SETCONTENT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hAlphaMask;
} MILCMD_VISUAL_SETALPHAMASK;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
} MILCMD_VISUAL_REMOVEALLCHILDREN;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hChild;
} MILCMD_VISUAL_REMOVECHILD;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hChild;
    UINT index;
} MILCMD_VISUAL_INSERTCHILDAT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    WORD countX;
    UINT16 UINT16Padding0;
    WORD countY;
    UINT16 UINT16Padding1;
} MILCMD_VISUAL_SETGUIDELINECOLLECTION;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPointAndSizeD Clip;
    BOOL IsEnabled;
} MILCMD_VISUAL_SETSCROLLABLEAREACLIP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hCamera;
} MILCMD_VIEWPORT3DVISUAL_SETCAMERA;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilPointAndSizeD Viewport;
} MILCMD_VIEWPORT3DVISUAL_SETVIEWPORT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hChild;
} MILCMD_VIEWPORT3DVISUAL_SET3DCHILD;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hContent;
} MILCMD_VISUAL3D_SETCONTENT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hTransform;
} MILCMD_VISUAL3D_SETTRANSFORM;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
} MILCMD_VISUAL3D_REMOVEALLCHILDREN;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hChild;
} MILCMD_VISUAL3D_REMOVECHILD;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hChild;
    UINT index;
} MILCMD_VISUAL3D_INSERTCHILDAT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 hwnd;
    UINT64 hSection;
    UINT64 masterDevice;
    UINT width;
    UINT height;
    MilColorF clearColor;
    UINT flags;
    HMIL_RESOURCE hBitmap;
    UINT stride;
    MilPixelFormat::Enum ePixelFormat;
    INT DpiAwarenessContext;
    DOUBLE DpiX;
    DOUBLE DpiY;
} MILCMD_HWNDTARGET_CREATE;