win32ss/dwm/milcore/include/Generated/wgx_commands.cs


namespace System.Windows.Media.Composition
{
    internal partial class DUCE
    {
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PARTITION_REGISTERFORNOTIFICATIONS
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal BOOL Enable;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_CHANNEL_REQUESTTIER
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal BOOL ReturnCommonMinimum;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PARTITION_SETVBLANKSYNCMODE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal BOOL Enable;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PARTITION_NOTIFYPRESENT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal UInt64 FrameTime;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_D3DIMAGE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 pInteropDeviceBitmap;
        [FieldOffset(16)] internal UInt64 pSoftwareBitmap;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_D3DIMAGE_PRESENT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 hEvent;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_BITMAP_INVALIDATE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal BOOL UseDirtyRect;
        [FieldOffset(12)] internal MS.Win32.NativeMethods.RECT DirtyRect;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DOUBLERESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_COLORRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_POINTRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Point Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_RECTRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Rect Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SIZERESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Size Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MATRIXRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilMatrix3x2D Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_POINT3DRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilPoint3F Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VECTOR3DRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilPoint3F Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_QUATERNIONRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilQuaternionF Value;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_RENDERDATA
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 cbData;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_ETWEVENTRESOURCE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 id;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETOFFSET
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double offsetX;
        [FieldOffset(16)] internal double offsetY;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETTRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hTransform;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETEFFECT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hEffect;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETCACHEMODE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hCacheMode;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETCLIP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hClip;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETALPHA
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double alpha;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETRENDEROPTIONS
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilRenderOptions renderOptions;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETCONTENT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hContent;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETALPHAMASK
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hAlphaMask;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_REMOVEALLCHILDREN
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_REMOVECHILD
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hChild;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_INSERTCHILDAT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hChild;
        [FieldOffset(12)] internal UInt32 index;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETGUIDELINECOLLECTION
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt16 countX;
        [FieldOffset(12)] internal UInt16 countY;
        [FieldOffset(15)] private byte BYTEPacking0;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL_SETSCROLLABLEAREACLIP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Rect Clip;
        [FieldOffset(40)] internal BOOL IsEnabled;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VIEWPORT3DVISUAL_SETCAMERA
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hCamera;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VIEWPORT3DVISUAL_SETVIEWPORT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal Rect Viewport;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VIEWPORT3DVISUAL_SET3DCHILD
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hChild;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL3D_SETCONTENT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hContent;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL3D_SETTRANSFORM
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hTransform;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL3D_REMOVEALLCHILDREN
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL3D_REMOVECHILD
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hChild;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_VISUAL3D_INSERTCHILDAT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hChild;
        [FieldOffset(12)] internal UInt32 index;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_HWNDTARGET_CREATE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 hwnd;
